RunBadge 수정