@@ -5,7 +5,7 @@ import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 
-import com.example.tracky.runrecord.runbadge.RunBadgeResponse.RunBadgeResponseDto;
+import com.example.tracky.runrecord.runbadge.RunBadgeResponse.DTO;
 
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
@@ -17,17 +17,12 @@ public class RunBadgeService {
     private final RunBadgeRepository runBadgeRepository;
 
     @Transactional
-    public List<RunBadgeResponse.RunBadgeResponseDto> 뱃지조회() {
+    public List<RunBadgeResponse.DTO> getAllBadges() {
         List<RunBadge> runBadges = runBadgeRepository.findAll();
 
         return runBadges.stream()
-                .map(badge -> new RunBadgeResponse.RunBadgeResponseDto(
-                        badge.getId(),
-                        badge.getName(),
-                        badge.getDescription(),
-                        badge.getImageUrl()
-                ))
-                .collect(Collectors.toList());
+                .map(badge -> new RunBadgeResponse.DTO(badge))
+                .toList();
     }
 
 }
